# CPP_Sandbox

./: CMakeLists.txt  Log.cpp  Log.h  Variables.cpp  main.cpp  readme.md
src/: main.cpp  test_main.cpp
src/Collections/: Vector.h  VectorModule.ixx
src/Increment/: Increment.cpp  Increment.h
src/Logger/: Logger.cpp  Logger.h
src/OOPPillars/: Pillar.cpp  Pillar.h
src/TemplatesInterfaces/: Circle.cpp  Circle.h  Drawable.h  Logger.cpp  Logger.h  Rectangle.cpp  Rectangle.h  Shape.h  Templates.cpp  Templates.h  Triangle.cpp  Triangle.h
src/Variables/: Variables.cpp  Variables.h
